reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,applet de commande
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93204057"
---
# <span data-ttu-id="2888a-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="2888a-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="2888a-104">SYNOPSIS</span><span class="sxs-lookup"><span data-stu-id="2888a-104">SYNOPSIS</span></span>

<span data-ttu-id="2888a-105">Copie une propriété et une valeur d'un emplacement spécifié vers un autre emplacement.</span><span class="sxs-lookup"><span data-stu-id="2888a-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="2888a-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="2888a-106">SYNTAX</span></span>

### <span data-ttu-id="2888a-107">Chemin d’accès (par défaut)</span><span class="sxs-lookup"><span data-stu-id="2888a-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="2888a-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="2888a-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="2888a-109">Description</span><span class="sxs-lookup"><span data-stu-id="2888a-109">DESCRIPTION</span></span>

<span data-ttu-id="2888a-110">L' `Copy-ItemProperty` applet de commande copie une propriété et une valeur d’un emplacement spécifié vers un autre emplacement.</span><span class="sxs-lookup"><span data-stu-id="2888a-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="2888a-111">Par exemple, vous pouvez utiliser cette applet de commande pour copier une ou plusieurs entrées de registre d’une clé de Registre vers une autre clé de registre.</span><span class="sxs-lookup"><span data-stu-id="2888a-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="2888a-112">EXEMPLES</span><span class="sxs-lookup"><span data-stu-id="2888a-112">EXAMPLES</span></span>

### <span data-ttu-id="2888a-113">Exemple 1 : copier une propriété d’une clé de Registre vers une autre clé de Registre</span><span class="sxs-lookup"><span data-stu-id="2888a-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="2888a-114">Cette commande copie la propriété nommée « MyProperty » de la clé de Registre « MyApplication » vers la clé de Registre « MyApplicationRev2 ».</span><span class="sxs-lookup"><span data-stu-id="2888a-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="2888a-115">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="2888a-115">PARAMETERS</span></span>

### <span data-ttu-id="2888a-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="2888a-116">-Credential</span></span>

<span data-ttu-id="2888a-117">Spécifie un compte d’utilisateur qui a l’autorisation d’exécuter cette action.</span><span class="sxs-lookup"><span data-stu-id="2888a-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="2888a-118">La valeur par défaut est l’utilisateur actuel.</span><span class="sxs-lookup"><span data-stu-id="2888a-118">The default is the current user.</span></span>

<span data-ttu-id="2888a-119">Tapez un nom d’utilisateur, tel que « User01 » ou « Domain01\User01 », ou entrez un objet **PSCredential** , tel que celui généré par l’applet de commande `Get-Credential`.</span><span class="sxs-lookup"><span data-stu-id="2888a-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="2888a-120">Si vous tapez un nom d’utilisateur, vous êtes invité à entrer un mot de passe.</span><span class="sxs-lookup"><span data-stu-id="2888a-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="2888a-121">Ce paramètre n’est pas pris en charge par les fournisseurs installés avec Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="2888a-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-122">-Destination</span><span class="sxs-lookup"><span data-stu-id="2888a-122">-Destination</span></span>

<span data-ttu-id="2888a-123">Spécifie le chemin d'accès à l'emplacement de destination.</span><span class="sxs-lookup"><span data-stu-id="2888a-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-124">-Exclude</span><span class="sxs-lookup"><span data-stu-id="2888a-124">-Exclude</span></span>

<span data-ttu-id="2888a-125">Spécifie, sous la forme d’un tableau de chaînes, un ou des éléments que cette applet de commande exclut.</span><span class="sxs-lookup"><span data-stu-id="2888a-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="2888a-126">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="2888a-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="2888a-127">Entrez un élément ou un modèle de chemin d'accès, tel que « \*.txt ».</span><span class="sxs-lookup"><span data-stu-id="2888a-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="2888a-128">Les caractères génériques sont autorisés.</span><span class="sxs-lookup"><span data-stu-id="2888a-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="2888a-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="2888a-129">-Filter</span></span>

<span data-ttu-id="2888a-130">Spécifie un filtre dans le format ou la langue du fournisseur.</span><span class="sxs-lookup"><span data-stu-id="2888a-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="2888a-131">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="2888a-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="2888a-132">La syntaxe du filtre, notamment l’utilisation de caractères génériques, dépend du fournisseur.</span><span class="sxs-lookup"><span data-stu-id="2888a-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="2888a-133">Les filtres sont plus efficaces que les autres paramètres, car le fournisseur les applique lorsque l’applet de commande obtient les objets au lieu de faire en sorte que PowerShell filtre les objets une fois qu’ils ont été récupérés.</span><span class="sxs-lookup"><span data-stu-id="2888a-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="2888a-134">-Force</span><span class="sxs-lookup"><span data-stu-id="2888a-134">-Force</span></span>

<span data-ttu-id="2888a-135">Force l’exécution de la commande sans demander la confirmation de l’utilisateur.</span><span class="sxs-lookup"><span data-stu-id="2888a-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="2888a-136">L'implémentation est différente d'un fournisseur à l'autre.</span><span class="sxs-lookup"><span data-stu-id="2888a-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="2888a-137">Pour plus d'informations, consultez [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="2888a-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-138">-Include</span><span class="sxs-lookup"><span data-stu-id="2888a-138">-Include</span></span>

<span data-ttu-id="2888a-139">Spécifie, sous la forme d’un tableau de chaînes, un ou des éléments que cette applet de commande comprend dans l’opération.</span><span class="sxs-lookup"><span data-stu-id="2888a-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="2888a-140">La valeur de ce paramètre qualifie le paramètre **Path** .</span><span class="sxs-lookup"><span data-stu-id="2888a-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="2888a-141">Entrez un élément ou un modèle de chemin d'accès, tel que « \*.txt ».</span><span class="sxs-lookup"><span data-stu-id="2888a-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="2888a-142">Les caractères génériques sont autorisés.</span><span class="sxs-lookup"><span data-stu-id="2888a-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="2888a-143">-LiteralPath</span></span>

<span data-ttu-id="2888a-144">Spécifie le chemin d’accès à l’emplacement actuel de la propriété.</span><span class="sxs-lookup"><span data-stu-id="2888a-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="2888a-145">Contrairement au paramètre **Path** , la valeur du paramètre **LiteralPath** est utilisée exactement telle que vous la tapez.</span><span class="sxs-lookup"><span data-stu-id="2888a-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="2888a-146">Aucun caractère n’est interprété en tant que caractère générique.</span><span class="sxs-lookup"><span data-stu-id="2888a-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="2888a-147">Si le chemin d’accès inclut des caractères d’échappement, mettez-le entre des guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="2888a-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="2888a-148">Les guillemets simples indiquent à PowerShell qu’il n’est pas possible d’interpréter les caractères comme des séquences d’échappement.</span><span class="sxs-lookup"><span data-stu-id="2888a-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-149">-Name</span><span class="sxs-lookup"><span data-stu-id="2888a-149">-Name</span></span>

<span data-ttu-id="2888a-150">Spécifie le nom de la propriété à copier.</span><span class="sxs-lookup"><span data-stu-id="2888a-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-151">-PassThru</span><span class="sxs-lookup"><span data-stu-id="2888a-151">-PassThru</span></span>

<span data-ttu-id="2888a-152">Retourne un objet représentant l’élément que vous utilisez.</span><span class="sxs-lookup"><span data-stu-id="2888a-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="2888a-153">Par défaut, cette applet de commande ne génère aucun résultat.</span><span class="sxs-lookup"><span data-stu-id="2888a-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-154">-Path</span><span class="sxs-lookup"><span data-stu-id="2888a-154">-Path</span></span>

<span data-ttu-id="2888a-155">Spécifie, sous forme de tableau de chaînes, le chemin d’accès à la propriété à copier.</span><span class="sxs-lookup"><span data-stu-id="2888a-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-156">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="2888a-156">-UseTransaction</span></span>
<span data-ttu-id="2888a-157">Inclut la commande dans la transaction active.</span><span class="sxs-lookup"><span data-stu-id="2888a-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="2888a-158">Ce paramètre est uniquement valide au cours d’une transaction.</span><span class="sxs-lookup"><span data-stu-id="2888a-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="2888a-159">Pour plus d'informations, consultez about_Transactions.</span><span class="sxs-lookup"><span data-stu-id="2888a-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="2888a-160">-Confirm</span></span>
<span data-ttu-id="2888a-161">Vous demande une confirmation avant d’exécuter l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="2888a-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="2888a-162">-WhatIf</span></span>

<span data-ttu-id="2888a-163">Montre ce qui se passe en cas d’exécution de l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="2888a-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="2888a-164">L’applet de commande n’est pas exécutée.</span><span class="sxs-lookup"><span data-stu-id="2888a-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2888a-165">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="2888a-165">CommonParameters</span></span>

<span data-ttu-id="2888a-166">Cette applet de commande prend en charge les paramètres communs : `-Debug` , `-ErrorAction` ,, `-ErrorVariable` `-InformationAction` , `-InformationVariable` , `-OutVariable` , `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` et `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="2888a-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="2888a-167">Pour plus d’informations, consultez [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="2888a-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="2888a-168">ENTRÉES</span><span class="sxs-lookup"><span data-stu-id="2888a-168">INPUTS</span></span>

### <span data-ttu-id="2888a-169">System.String</span><span class="sxs-lookup"><span data-stu-id="2888a-169">System.String</span></span>

<span data-ttu-id="2888a-170">Vous pouvez diriger une chaîne qui contient un chemin d’accès vers cette applet de commande.</span><span class="sxs-lookup"><span data-stu-id="2888a-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="2888a-171">SORTIES</span><span class="sxs-lookup"><span data-stu-id="2888a-171">OUTPUTS</span></span>

### <span data-ttu-id="2888a-172">None ou System. Management. Automation. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="2888a-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="2888a-173">Quand vous utilisez le paramètre **PassThru** , cette applet de commande génère un **PSCustomObject** représentant la propriété d’élément copiée.</span><span class="sxs-lookup"><span data-stu-id="2888a-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="2888a-174">Sinon, cette applet de commande ne génère aucune sortie.</span><span class="sxs-lookup"><span data-stu-id="2888a-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="2888a-175">REMARQUES</span><span class="sxs-lookup"><span data-stu-id="2888a-175">NOTES</span></span>

<span data-ttu-id="2888a-176">Cette applet de commande est conçue pour utiliser les données exposées par n’importe quel fournisseur.</span><span class="sxs-lookup"><span data-stu-id="2888a-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="2888a-177">Pour répertorier les fournisseurs disponibles dans votre session, tapez `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="2888a-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="2888a-178">Pour plus d'informations, consultez about_Providers.</span><span class="sxs-lookup"><span data-stu-id="2888a-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="2888a-179">LIENS CONNEXES</span><span class="sxs-lookup"><span data-stu-id="2888a-179">RELATED LINKS</span></span>

[<span data-ttu-id="2888a-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="2888a-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="2888a-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="2888a-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="2888a-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="2888a-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="2888a-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="2888a-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="2888a-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="2888a-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="2888a-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="2888a-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="2888a-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="2888a-186">Get-PSProvider</span></span>](Get-PSProvider.md)
